--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,11 @@ web:
   image: nginx:1.21.6
   ports:
     - "8080:80"
+    - "443:443"
   volumes:
     - ./app:/app
-    - ./site.conf:/etc/nginx/conf.d/dafualt.conf
+    - ./site.conf:/etc/nginx/conf.d/default.conf
+    - ./ssl/:/etc/nginx/certs
   links:
     - app
 
