--- a/site.conf
+++ b/site.conf
@@ -1,7 +1,12 @@
 server {
+    server_name localhost;
+    listen 443 ssl;
+    ssl_certificate /etc/nginx/certs/localhost.crt;
+    ssl_certificate_key /etc/nginx/certs/localhost.key;
+
     root /app;
     index index.php index.html;
-    server_name localhost;
+
     error_log   /var/log/nginx/error.log;
     access_log  /var/log/nginx/access.log;
 
